# stalp

./: README.md  nb.ipynb  pyproject.toml  temp.ipynb
stalp/: __init__.py  __main__.py  model.py  train.py  util.py  vgg.py
stalp/lib/: vgg_perceptual_loss.py
